# decisoniq-v6pyvf

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
documentation/: Input Prompt.md  Product Requirements Document (PRD).md  (+2 more)
src/backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
src/backend/src/: __init__.py
src/backend/src/api/: __init__.py  dependencies.py  error_handlers.py  middleware.py  security.py  server.py
src/backend/src/api/routes/: __init__.py  auth.py  customers.py  health.py  integrations.py  metrics.py  ml.py  playbooks.py  risk.py  tasks.py  users.py
src/backend/src/config/: __init__.py  aws.py  cache.py  database.py  integrations.py  logging.py  ml.py  security.py  settings.py
src/backend/src/core/: __init__.py  auth.py  cache.py  events.py  exceptions.py  logging.py  security.py  telemetry.py  utils.py
src/backend/src/db/: __init__.py  base.py  session.py
src/backend/src/db/migrations/: __init__.py  env.py  script.py.mako
src/backend/src/db/repositories/: __init__.py  customers.py  playbooks.py  risk.py  tasks.py  users.py
src/backend/src/integrations/: __init__.py
src/backend/src/integrations/aws/: __init__.py  s3.py  sagemaker.py
src/backend/src/integrations/blitzy/: __init__.py  auth.py  tables.py
src/backend/src/integrations/calendar/: __init__.py  google.py
src/backend/src/integrations/crm/: __init__.py  salesforce.py
src/backend/src/integrations/payment/: __init__.py  stripe.py
src/backend/src/ml/: __init__.py  feature_store.py  pipeline.py  predictors.py  training.py
src/backend/src/ml/models/: __init__.py  churn.py  expansion.py  health.py  risk.py
src/backend/src/models/: __init__.py  auth.py  base.py  customer.py  metrics.py  playbook.py  risk.py  task.py  user.py
src/backend/src/schemas/: __init__.py  auth.py  customer.py  metrics.py  playbook.py  risk.py  task.py  user.py
src/backend/src/services/: __init__.py  auth.py  customer.py  email.py  metrics.py  notification.py  playbook.py  risk.py  task.py  user.py
src/backend/src/workers/: __init__.py  celery.py
src/backend/src/workers/tasks/: __init__.py  integrations.py  ml.py  notifications.py  playbooks.py
src/backend/tests/: __init__.py  conftest.py
src/backend/tests/integration/: __init__.py
src/backend/tests/integration/api/: __init__.py  test_auth.py  test_customers.py  test_playbooks.py  test_risk.py  test_tasks.py
src/backend/tests/integration/db/: __init__.py  test_repositories.py
src/backend/tests/integration/ml/: __init__.py  test_predictions.py
src/backend/tests/integration/services/: __init__.py  test_customer.py  test_playbook.py
src/backend/tests/unit/: __init__.py
src/backend/tests/unit/core/: __init__.py  test_auth.py  test_security.py
src/backend/tests/unit/ml/: __init__.py  test_models.py
src/backend/tests/unit/services/: __init__.py  test_risk.py
(+305 files in other folders)
